# tailspin

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: test.yml
frontend/: .prettierrc  jest.config.js  package.json  tsconfig.json  webpack.config.js
frontend/src/: App.tsx  Line.tsx  Messages.tsx  TabView.tsx  index.html  index.tsx
frontend/src/components/: ConnectionLossOverlay.tsx  FileSwitcher.tsx  Highlight.tsx  JSON.tsx  Line.tsx  Messages.tsx  TabView.tsx  circle.tsx  notes.txt  search.tsx
frontend/src/reducers/: logDataSlice.ts  mainViewModelSlice.ts  sharedActions.ts  store.ts
frontend/src/storybook/: index.tsx  utils.tsx
frontend/src/storybook/connectionLoss/: index.tsx
frontend/src/storybook/json/: index.tsx
frontend/src/storybook/messages/: index.tsx
frontend/src/storybook/tabView/: index.tsx
frontend/src/utils/: colorHash.ts  filename.spec.ts  filename.ts  matchers.ts  splitter.spec.ts  splitter.ts  useHighlightCapture.ts
src/: app.rs  highlight.rs  input.rs  json_viewer.rs  main.rs  tabs.rs  ui.rs
src/log/: mod.rs
src/tui/: FIELD_CONFIG_PLAN.md  highlight.rs  json_viewer.rs  main.rs  tabs.rs  ui.rs
