[package]
name = "tailspin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tailspin"
path = "src/main.rs"

[[bin]]
name = "tailspin-tui"
path = "src/tui/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "io-util"] }
warp = "0.3"
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"
regex = "1"
unicode-width = "0.2"
