[package]
name = "tailspin"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "tailspin"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"
regex = "1"
unicode-width = "0.2"
